# advent-of-code

./: .gitignore  Cargo.toml  README.md  outputs.json  outputs.ron
aoc-cli/: Cargo.toml
aoc-cli/src/: main.rs
aoc-old/: Cargo.toml
aoc-old/src/: day16.rs  day17.rs  day19.rs  day21.rs  day9.rs  day_template.rs  main.rs
aoc-solutions/: .gitignore  Cargo.toml  build.rs
aoc-solutions/year2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
aoc-solutions/year2018/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  template.rs
aoc-solutions/year2019/: day01.rs  day02.rs
aoc-test/: Cargo.toml
aoc-test/src/: main.rs
aoc-tools/: Cargo.toml
aoc-tools/aoc-tools-macros/: Cargo.toml
aoc-tools/aoc-tools-macros/src/: lib.rs
aoc-tools/src/: lib.rs
aoc-workbench/: Cargo.toml
aoc-workbench/src/: aoc_workbench.rs  main.rs
inputs/year2018/: input19_b.txt  input21_2.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_template.rs  main.rs
src/year2017/: day01.rs  day02.rs
