[package]
name = "aoc-cli"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
#aoc-tools = { path = "../aoc-tools" }
reqwest = "0.9"
select = "0.4.3"
clap = "2.0"
anyhow = "1.0"
colored = "1.0"
regex = "1.0"